# fullstack-langgraph

./: .env.example  .gitignore  1.py  1.txt  AI_Infra私有化部署准备方案.txt  AI基础设施机房水电冷专项规划.txt  API_KEY_USAGE.md  CLAUDE.md  DOCUMENT_PREVIEW_IMPLEMENTATION.md  LICENSE  MANAGE_OMIND.md  Makefile  OMIND_DEPLOYMENT.md  PYTHON_CONFIG.md  README.md  build_omind.sh  build_production.sh  docker-compose.cas.yml  install_deps.sh  manage_omind.sh  monitor_readme.md  mysql_migration.sql  omind_prd_frm.sql  requirements_frozen.txt  serial_approval_agent.py  start_unla_dev.sh  test_cas_validation.py  test_llm_config.py  unla_real.db  传统机房AI智能化改造要点.txt  远程重新发版部署说明.md
backend/: .env  .env.auth.example  .env.example  CODEOWNERS  MEM0_MEMORY_LAYERS_GUIDE.md  Makefile  NEO4J_INTEGRATION_REPORT.md  README_SOP_API.md  REFACTOR_PLAN.md  SCHEDULED_TASK_TEST_REPORT.md  SIMPLE_REFACTOR.md  TESTING.md  UV_GUIDE.md  assign_user_role.py  celery_manage.sh  check_user_permissions.py  create_structure.py  fastapi_main.py  import_sop_data.py  import_sop_via_api.sh  init.sql  init_fast.sql  langgraph.json  langgraph.sql  manage.py  manage.sh  migrate_data.py  mysql_tables.sql  omind.conf  omind.sql  omind_prd_data.sql  omind_prd_frm.sql  pyproject.toml  requirements-fastapi.txt  requirements.txt  requirements_frozen.txt  test_api_curl.sh  test_auth_access.py  test_db_connection.py  test_file_upload_username.sh  (+9 more)
backend/docs/: CMDB_KNOWLEDGE_GRAPH_BEST_PRACTICES.md  agent_api_curl_guide.md  agent_api_guide.md  agent_api_test_guide.md
backend/documents/: README.md
backend/migrations/: 2024_add_knowledge_base_tables.sql  2024_optimize_kb_tree_structure.sql  add_agent_key_field.sql  add_idc_report_menu.sql  add_notify_status_to_scan_tasks.sql  assign_idc_report_permission.sql  create_scan_tasks_tables.py
backend/scripts/: migrate_documents.py
backend/src/: __init__.py  api_router.py  main.py  router.py
backend/src/agent/: graph.py  utils.py
backend/src/agents/: __init__.py
backend/src/agents/diagnostic_agent/: __init__.py  checkpoint.py  configuration.py  general_qa_subgraph.py  graph.py  main_graph.py  prompts.py  react_general_agent.py  schemas.py  sop_diagnosis_subgraph.py  state.py  tool_approval_handler.py  tool_permissions.py  tools.py  tools_and_schemas.py  tools_mcp.py  tools_with_approval.py  utils.py  visualize_subgraphs.py
backend/src/agents/generic_agent/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py  utils.py
backend/src/agents/research_agent/: __init__.py  graph.py
backend/src/api/: agent_routes.py  ai_model_routes.py  app.py  deps.py  mcp_routers.py  mcp_routes.py  router.py  sop_routes.py  streaming.py  threads.py  user_threads_db.py  utils.py
backend/src/api/endpoints/: agents.py  ai_models.py  mcp.py  scheduled_tasks.py  sop.py
backend/src/apps/: __init__.py
backend/src/apps/agent/: __init__.py  checkpoint_factory.py  dependencies.py  endpoints.py  memory_factory.py  memory_utils.py  models.py  schema.py  tasks.py  utils.py
backend/src/apps/ai_model/: __init__.py  endpoints.py  models.py  schema.py
backend/src/apps/auth/: README.md  __init__.py  cas_dependencies.py  cas_endpoints.py  cas_frontend_example.md  cas_middleware.py  dependencies.py  endpoints.py  menu_schemas.py  menu_service.py  middleware.py  models.py  rbac_integration.md  rbac_service.py  router.py  schema.py  schemas.py  service.py  sso_service.py  utils.py
backend/src/apps/cmdb/: __init__.py  config.py  schema_manager.py
backend/src/apps/hardware_proxy/: __init__.py
backend/src/apps/idc_research/: Readme.md  __init__.py  analysis_endpoints.py  docs_endpoints.py  endpoints.py  models.py  openapi-idc-research.yaml  reports_endpoints.py  schema.py
backend/src/apps/kb/: endpoints.py  models.py  schema.py
backend/src/apps/llm/: __init__.py
backend/src/apps/mcp/: __init__.py  endpoints.py  models.py  schema.py
backend/src/apps/memory/: __init__.py  endpoints.py  schema.py
backend/src/apps/scheduled_task/: __init__.py  (+4 more)
backend/src/celery/: README.md  __init__.py  celery.py  config.py  db_utils.py  health.py  logger.py  scheduler.py  sync_db_helpers.py  tasks.py
backend/src/core/: config.py  dependencies.py  security.py
backend/src/database/: config.py  models.py
backend/src/db/: config.py  models.py  transaction.py
backend/src/schemas/: mcp.py
backend/src/scripts/: init.sql  init_sop_data.py
backend/src/services/: __init__.py  agent_config_service.py  agent_service.py  base_service.py  mcp_service.py  sop_service.py  user_service.py
backend/src/shared/: __init__.py
backend/src/tools/: elasticsearch_tool.py  elasticsearch_tool.py_bak  mysql_tool.py  mysql_tool.py_bak  sop_tool.py  zabbix_tool.py
backend/test/: .coveragerc  README.md  conftest.py  pyproject.toml.example  pytest.ini  test_module.sh
backend/test/fixtures/: __init__.py  common_fixtures.py
backend/test/scripts/: clean_test.sh  coverage_report.sh
(+774 files in other folders)
