[project]
name = "omind-backend"
version = "1.0.0"
description = "OMind智能运维平台后端"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.12.15",
    "aiomysql>=0.2.0",
    "aiosignal>=1.4.0",
    "alembic>=1.16.4",
    "annotated-types>=0.7.0",
    "anyio>=4.10.0",
    "asttokens>=3.0.0",
    "asyncpg>=0.30.0",
    "attrs>=25.3.0",
    "authlib>=1.6.1",
    "bcrypt>=4.3.0",
    "black>=25.1.0",
    "certifi>=2025.8.3",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.3",
    "click>=8.2.1",
    "colorlog>=6.9.0",
    "cryptography>=45.0.6",
    "cyclopts>=3.22.5",
    "dataclasses-json>=0.6.7",
    "decorator>=5.2.1",
    "distro>=1.9.0",
    "dnspython>=2.7.0",
    "docstring-parser>=0.17.0",
    "docutils>=0.22",
    "email-validator>=2.2.0",
    "exceptiongroup>=1.3.0",
    "executing>=2.2.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "flake8>=7.3.0",
    "frozenlist>=1.7.0",
    "greenlet>=3.2.4",
    "gunicorn>=23.0.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.1",
    "idna>=3.10",
    "iniconfig>=2.1.0",
    "ipython>=9.4.0",
    "ipython-pygments-lexers>=1.1.1",
    "jedi>=0.19.2",
    "jiter>=0.10.0",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "jsonschema>=4.25.0",
    "jsonschema-specifications>=2025.4.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-deepseek>=0.1.4",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.30",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.5",
    "langgraph-checkpoint>=2.1.1",
    "langgraph-checkpoint-mysql>=2.0.15",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langgraph-prebuilt>=0.6.4",
    "langgraph-sdk>=0.2.0",
    "langsmith>=0.4.14",
    "mako>=1.3.10",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.2",
    "marshmallow>=3.26.1",
    "matplotlib-inline>=0.1.7",
    "mccabe>=0.7.0",
    "mcp>=1.13.0",
    "mdurl>=0.1.2",
    "multidict>=6.6.4",
    "mypy>=1.17.1",
    "mypy-extensions>=1.1.0",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "openapi-pydantic>=0.5.1",
    "orjson>=3.11.2",
    "ormsgpack>=1.10.0",
    "packaging>=25.0",
    "paramiko>=4.0.0",
    "parso>=0.8.4",
    "passlib>=1.7.4",
    "pathspec>=0.12.1",
    "pexpect>=4.9.0",
    "platformdirs>=4.3.8",
    "pluggy>=1.6.0",
    "prompt-toolkit>=3.0.51",
    "propcache>=0.3.2",
    "psutil>=7.0.0",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "psycopg-pool>=3.2.6",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pycodestyle>=2.14.0",
    "pycparser>=2.22",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
    "pyflakes>=3.4.0",
    "pygments>=2.19.2",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "pynacl>=1.5.0",
    "pyotp>=2.9.0",
    "pyperclip>=1.9.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "referencing>=0.36.2",
    "regex>=2025.7.34",
    "requests>=2.32.4",
    "requests-toolbelt>=1.0.0",
    "rich>=14.1.0",
    "rich-rst>=1.3.1",
    "rpds-py>=0.27.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.43",
    "sse-starlette>=3.0.2",
    "stack-data>=0.6.3",
    "starlette>=0.47.2",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "typing-extensions>=4.14.1",
    "typing-inspect>=0.9.0",
    "typing-inspection>=0.4.1",
    "urllib3>=2.5.0",
    "uvicorn>=0.35.0",
    "wcwidth>=0.2.13",
    "xxhash>=3.5.0",
    "yarl>=1.20.1",
    "zstandard>=0.23.0",
]
